# calculation-methods-lab-programs

1/: CMakeLists.txt  main.cpp
10/: CMakeLists.txt  create_graphs.py  main.cpp
10/output/csv/: convergence.csv  explicit_border.csv  explicit_stable.csv  explicit_unstable.csv  implicit_euler.csv  trapezoid.csv
11/: CMakeLists.txt  main.cpp  plot_results.py
11/results/: convergence.csv  snapshots.csv  time_error.csv
12/: CMakeLists.txt  create_graphs.py  main.cpp
12/output/csv/: chebyshev_nodes.csv  equidistant_nodes.csv  runge_data.csv
2/: CMakeLists.txt  main.cpp  output.txt
3/: CMakeLists.txt  main.cpp
4/: CMakeLists.txt  main.cpp
5/: CMakeLists.txt  main.cpp
6/: CMakeLists.txt  main.cpp
7/: CMakeLists.txt  main.cpp
8/: CMakeLists.txt  main.cpp
8/data/: .~lock.results.ods#  double_0.csv  double_pi_over_2.csv  double_pi_over_4.csv  long_double_0.csv  long_double_pi_over_2.csv  long_double_pi_over_4.csv
8/data/output/: .~lock.results.ods#  results.ods
8/data/scripts/: create_graphs.py  create_sheet.py
9/: CMakeLists.txt  create_graphs.py  data.csv  main.cpp
